--- a/MyAlermApp/Base.lproj/Main.storyboard
+++ b/MyAlermApp/Base.lproj/Main.storyboard
@@ -1,24 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xEu-Pn-PZV">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Alarm-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AlarmListViewController" customModule="MyAlermApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Alarm" id="ULa-NI-wTL"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="14" y="-14"/>
+        </scene>
+        <!--Add Alarm View Controller-->
+        <scene sceneID="hre-De-mRw">
+            <objects>
+                <viewController storyboardIdentifier="AddAlarmViewController" id="KdW-Dt-4De" customClass="AddAlarmViewController" customModule="MyAlermApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ue1-Re-agy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Wl0-ua-0Od">
+                                <rect key="frame" x="0.0" y="20" width="375" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="544022238.92533004">
+                                    <!--2018-03-29 13:17:18 +0000-->
+                                </date>
+                            </datePicker>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2aa-hd-8WW">
+                                <rect key="frame" x="0.0" y="236" width="375" height="180"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="vme-ky-iUJ"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="optionCell" id="dSS-Pt-yCC">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dSS-Pt-yCC" id="Ddg-wy-8Ze">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Wl0-ua-0Od" firstAttribute="leading" secondItem="cIb-ev-ZLM" secondAttribute="leading" id="50T-Se-p9g"/>
+                            <constraint firstItem="Wl0-ua-0Od" firstAttribute="trailing" secondItem="cIb-ev-ZLM" secondAttribute="trailing" id="8Ox-jm-2rE"/>
+                            <constraint firstItem="2aa-hd-8WW" firstAttribute="leading" secondItem="cIb-ev-ZLM" secondAttribute="leading" id="euK-9N-QP1"/>
+                            <constraint firstItem="Wl0-ua-0Od" firstAttribute="top" secondItem="cIb-ev-ZLM" secondAttribute="top" id="lhz-3e-iXd"/>
+                            <constraint firstItem="cIb-ev-ZLM" firstAttribute="trailing" secondItem="2aa-hd-8WW" secondAttribute="trailing" id="v2a-6O-9T2"/>
+                            <constraint firstItem="2aa-hd-8WW" firstAttribute="top" secondItem="Wl0-ua-0Od" secondAttribute="bottom" id="zgr-9k-BgP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cIb-ev-ZLM"/>
+                    </view>
+                    <connections>
+                        <outlet property="optionTableView" destination="2aa-hd-8WW" id="0hL-rJ-TBs"/>
+                        <outlet property="picker" destination="Wl0-ua-0Od" id="egt-Sr-uhq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4DC-eo-cfP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="679" y="-15"/>
+        </scene>
+        <!--Week Selection View Controller-->
+        <scene sceneID="LAA-15-dYc">
+            <objects>
+                <viewController storyboardIdentifier="WeekSelectionViewController" id="gqW-J1-x7d" customClass="WeekSelectionViewController" customModule="MyAlermApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fcH-Y7-2JB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aZw-2i-UNo">
+                                <rect key="frame" x="0.0" y="70" width="375" height="315"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="315" id="Eo5-9E-QrI"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="weekCell" id="6Tl-eY-NO0">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Tl-eY-NO0" id="z2j-40-IpR">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aZw-2i-UNo" firstAttribute="leading" secondItem="Guy-Mm-Wkp" secondAttribute="leading" id="D6d-1v-Oqh"/>
+                            <constraint firstItem="Guy-Mm-Wkp" firstAttribute="trailing" secondItem="aZw-2i-UNo" secondAttribute="trailing" id="F2P-60-BvO"/>
+                            <constraint firstItem="aZw-2i-UNo" firstAttribute="top" secondItem="Guy-Mm-Wkp" secondAttribute="top" constant="50" id="kRW-RR-DC7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Guy-Mm-Wkp"/>
+                    </view>
+                    <connections>
+                        <outlet property="weekTableView" destination="aZw-2i-UNo" id="3fa-4L-Qyh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9nT-ze-bAB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1422" y="-15"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="a10-SH-etj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xEu-Pn-PZV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5uk-34-i57">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="MlI-2b-hQd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KmT-E5-Z0R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-804" y="-14"/>
         </scene>
     </scenes>
 </document>
